# waveracer

./: .gitignore  Cargo.toml  justfile
.github/workflows/: ci.yml
src/: lib.rs  main.rs  main2.rs
src/helpers/: util.rs
src/math/: bounds3.rs  color.rs  comparison.rs  interval.rs  mod.rs  random.rs  ray.rs
src/math/transform/: lerp.rs  mod.rs  rotate.rs  slerp.rs
src/render/: dummy_renderer.rs  frame_data.rs  mod.rs  monte_carlo_renderer.rs
src/render/accel/: bvh_node.rs  mod.rs
src/render/camera/: basic_camera.rs  camera_state.rs  camera_transition.rs  film.rs  mod.rs  ray_spawner.rs  render_config.rs  video_camera.rs
src/render/camera/transitions/: lerp_transition.rs  mod.rs
src/render/geom/: empty.rs  hit_record.rs  hitrecord.rs  hittable.rs  mod.rs  sphere.rs  triangle.rs  triangle_mesh.rs
src/render/image/: mod.rs  multi_file_png_writer.rs  png_image_writer.rs
src/render/materials/: dielectric.rs  diffuse_light.rs  lambertian.rs  material.rs  metal.rs  mod.rs  null.rs  texture.rs
src/render/pipeline/: orchestrator.rs
src/render/renderer/: dummy_renderer.rs  mod.rs  monte_carlo_renderer.rs
src/scene/: bunny.rs  mod.rs  sample.rs  scene_data.rs
