[package]
name = "rt2"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
derive_more = { version = "2.1.1", features = ["full"] }
glam = "0.32.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
kdam = "0.6.4"
mockall = "0.14.0"
rand = "0.10.1"
tempfile = "3.27.0"
